# effect

./: AGENTS.md  Cargo.toml  README.md  WALLPAPER.md  build.rs
scripts/: package-lively.ps1
src/: config.rs  desktop.rs  main.rs  ui.rs  wallpaper.rs
static/clook/: index.html
static/clouds/: LivelyInfo.json  clouds.html
static/clouds/css/: style.css
static/clouds/js/: script.js
static/code/: decode.html  index.html
static/price/: index.html  particle.html
static/price/css/: wall.css
static/price/js/: CSS3DRenderer.global.js  OrbitControls.global.js
static/threejs/: custom-plane.js  index.html  particle.html
static/threejs/css/: reset.css
static/viewData/: index.html
static/wave/: index.html
